--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -14,7 +14,7 @@
 		</tr>
 		<tr>
 			<th>Pledging Ends On</th>
-			<td><%= @project.pledging_ends_on %></td>
+			<td><%= format_pledging_date(@project) %></td>
 		</tr>
 	</table>
 </article>
