--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -21,3 +21,4 @@
 
 <%= link_to "All Projects", projects_path %>
 <%= link_to "Edit", edit_project_path(@project) %>
+<%= link_to "Delete", project_path(@project), method: :delete, data: { confirm: 'Are you sure?' } %>
