--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -6,6 +6,7 @@
 	<article>
 		<header>
 			<h2><%= link_to project.name, project %></h2>
+			<%= image_for(project) %>
 		</header>
 		<p><%= truncate(project.description, length: 149, separator: ' ') %></p>
 		<table>
